--- a/jardiquest/view/orders.html
+++ b/jardiquest/view/orders.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='css/view/market/orders.css') }}">
 
 <div id="orders_container">
-    <div id="market_top">
+    <div id="orders_top">
         <p>Ce que les participants à votre jardin ont achetés :</p>
     </div>
 
